set box-sizing to the default value to fix the broken layout by bootstrap3

--- a/tendenci/core/base/static/css/global_tendenci.css
+++ b/tendenci/core/base/static/css/global_tendenci.css
@@ -72,3 +72,11 @@ span.member-icon{
         content: "" !important;
     }
 }
+
+* {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;  
+}
+
+
